<resources>
    <string name="app_name">voicescout-android</string>
    <string name="btn1_main">사용자 음성 학습</string>
    <string name="btn1_sub">내 음성 데이터를 등록하고 학습합니다.</string>
    <string name="btn2_main">문장 음성 합성</string>
    <string name="btn2_sub">입력한 문장을 학습된 내 음성으로 변환합니다.</string>
    <string name="btn3_main">합성 음성 전송</string>
    <string name="btn3_sub">생성된 음성 파일을 공유합니다.</string>
    <string name="btn4_main">합성 음성 저장소</string>
    <string name="btn4_sub">생성된 음성 파일을 확인하고 관리합니다.</string>

    <string name="record_start">녹음 시작</string>
    <string name="record_stop">녹음 중지</string>
    <string name="permission_denied_message">녹음을 위해 마이크 권한이 필요합니다.</string>

    <string-array name="guide_sentences">
        <item>깊은 소리로 책벌레는 책장을 빠르게 넘기며 지친 눈을 부비고 생각에 잠겼다.</item>
        <item>첫눈이 소복이 쌓인 운동장에서 아이들은 두꺼운 겨울 점퍼를 입고 신나게 눈싸움을 벌였다.</item>
        <item>촉촉이 내리는 봄비 아래 연두빛 새싹들이 힘차게 고개를 내밀며 생명의 기운을 뿜었다.</item>
        <item>차갑게 얼어붙은 호수 위로 붉은 노을이 물들자 낚시꾼은 고요한 물결을 바라보며 한숨을 돌렸다.</item>
        <item>부드러운 카페트 위에 누워 달콤한 케이크와 향긋한 커피를 즐기며 여유로운 오후를 만끽했다.</item>
        <item>황금빛 가을 들판을 달려가는 말발굽 소리가 바람에 실려 멀리까지 울려 퍼졌다.</item>
        <item>짙푸른 밤하늘에 수놓인 별무리가 반짝이며 사람들의 가슴속에 소원을 싣게 했다.</item>
        <item>떨어지는 단풍잎 사이로 선선한 바람이 불어오며 가을의 향기를 깊이 느끼게 했다.</item>
        <item>친구들과 둘러앉아 김치전과 부대찌개를 나눠 먹으며 시끌벅적한 이야기를 나누었다.</item>
        <item>작은 포장마차에서 파는 바삭한 호떡 한 입에 따뜻한 달콤함이 입안 가득 퍼졌다.</item>
    </string-array>
</resources>