<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/back">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/midBlue"
            android:layout_marginBottom="25dp">

            <ImageView
                android:id="@+id/toolbar_logo"
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_upper" />

            <ImageView
                android:id="@+id/toolbar_menu"
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_menu" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textColor="@color/subBlack"
            android:text="1단계">
        </TextView>
        <LinearLayout
            android:id="@+id/btn_record_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:gravity="center_vertical"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:src="@drawable/ic_record"
                android:layout_marginEnd="25dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn1_main"
                    style="@style/TextStyle.ExtraBold"
                    android:textSize="16sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn1_sub"
                    android:textSize="12sp"
                    android:textColor="#808080" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/subBlack"
            android:text="2단계">
        </TextView>
        <LinearLayout
            android:id="@+id/btn_tts_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:gravity="center_vertical"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:src="@drawable/ic_tts"
                android:layout_marginEnd="25dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn2_main"
                    style="@style/TextStyle.ExtraBold"
                    android:textSize="16sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn2_sub"
                    android:textSize="12sp"
                    android:textColor="#808080" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/subBlack"
            android:text="3단계">
        </TextView>
        <LinearLayout
            android:id="@+id/btn_send_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:gravity="center_vertical"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:src="@drawable/ic_send"
                android:layout_marginEnd="25dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn3_main"
                    style="@style/TextStyle.ExtraBold"
                    android:textSize="16sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn3_sub"
                    android:textSize="12sp"
                    android:textColor="#808080" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/subBlack"
            android:text="저장 및 관리">
        </TextView>
        <LinearLayout
            android:id="@+id/btn_storage_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:gravity="center_vertical"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="@dimen/ic_w"
                android:layout_height="@dimen/ic_w"
                android:src="@drawable/ic_storage"
                android:layout_marginEnd="25dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn4_main"
                    style="@style/TextStyle.ExtraBold"
                    android:textSize="16sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn4_sub"
                    android:textSize="12sp"
                    android:textColor="#808080" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginVertical="15dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/logo_lower" />

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />
</androidx.drawerlayout.widget.DrawerLayout>