<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="25dp">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="작업 상태"
        android:textColor="#999999"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="15dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn1_main"
            android:textColor="#999999"
            android:textSize="20sp" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="15dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn2_main"
            android:textColor="#999999"
            android:textSize="20sp" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle_default" />
    </LinearLayout>

    <!-- 합성 음성 전송 (회색 처리) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="15dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn3_main"
            android:textColor="#999999"
            android:textSize="20sp" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle_default" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_siren"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="통합신고대응센터"
            android:textColor="@color/point"
            android:textSize="18sp"
            style="@style/TextStyle.ExtraBold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_feedback"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="피드백 보내기"
            android:textColor="@color/point"
            android:textSize="18sp"
            style="@style/TextStyle.ExtraBold" />
    </LinearLayout>


</LinearLayout>
