<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/siren_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">

        <ImageView
            android:layout_width="@dimen/ic_w"
            android:layout_height="@dimen/ic_w"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_siren_2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.ExtraBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="부산 경찰청"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="검찰·경찰 사칭 보이스피싱 주의!\n계좌이체 요구 시 112에 신고하세요."
                android:textColor="#808080"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/sirenCancelIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/icon_cancel" />

    </LinearLayout>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="위치를 확인 중입니다..."
        android:layout_margin="15dp"
        android:textColor="@color/point"
        android:textSize="12sp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="1단계"
        android:textColor="@color/subBlack"></TextView>

    <LinearLayout
        android:id="@+id/btn_record_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">

        <ImageView
            android:layout_width="@dimen/ic_w"
            android:layout_height="@dimen/ic_w"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_record" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.ExtraBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn1_main"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn1_sub"
                android:textColor="#808080"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:text="2단계"
        android:textColor="@color/subBlack"></TextView>

    <LinearLayout
        android:id="@+id/btn_storage_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">

        <ImageView
            android:layout_width="@dimen/ic_w"
            android:layout_height="@dimen/ic_w"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_storage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.ExtraBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn4_main"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn4_sub"
                android:textColor="#808080"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:text="배너"
        android:textColor="@color/subBlack"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/bannerViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- 페이지 인디케이터 -->
        <LinearLayout
            android:id="@+id/bannerIndicatorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginVertical="15dp"
        android:src="@drawable/logo_lower" />

</LinearLayout>